# FileSystemTools

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  compare_jdupes.sh
benchmark/dedup/: CMakeLists.txt  DedupBenchmark.cpp
benchmark/rapidcheck/: CMakeLists.txt  RapidcheckBenchmark.cpp
docs/: benchmark_report.md  dedup_benchmark.md  dedup_hash_algorithm.md  dedup_optimization_report.md  dedup_optimization_report_old.md  note.md  optimization_report.md  rapidcheck.md  总览.md  第 1 层：按文件大小进行候选筛选.md  第 2 层：硬链接折叠与顺序读优化.md  第 4 层：小文件固定成本优化.md  第 6 层：full hash 汇流与双轨调度.md  项目背景.md
docs/dedup/: benchmark_record.md  为什么不做大文件单文件并行哈希.md  开源方法对比：dedup_vs_jdupes.md  执行模型优化：并发执行.md  第 3 层：小文件与大文件分流.md  第 5 层：大文件 partial hash 漏斗.md
src/: CMakeLists.txt  FileInfo.h  FileWalker.cpp  Hasher.cpp  Hasher.h
src/dedup/: Blake3Hash.h  CMakeLists.txt  DuplicateFinder.cpp  DuplicateFinder.h  FileInfo.h  FileWalker.cpp  FileWalker.h  Fnv1aHash.h  Hasher.cpp  Hasher.h  main.cpp
src/rapidcheck/: CMakeLists.txt  FileVerifier.cpp  FileVerifier.h  ProgressReporter.cpp  ProgressReporter.h  Sha256Hash.cpp  Sha256Hash.h  main.cpp
test/: DuplicateFinderTests.cpp  FileWalkerTests.cpp  run_cli_tests.sh
test/dedup/: Blake3HashTests.cpp  CMakeLists.txt  DuplicateFinderTests.cpp  Fnv1aHashTests.cpp  HasherTests.cpp
test/rapidcheck/: CMakeLists.txt  test_hash.cpp
